sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:3: error: not found: value getPositionTrou
  var y = getPositionTrou()
          ^NaiveBaseball:14: error: type mismatch;
 found   : Any
 required: Int
  deplace(m,p)
          ^NaiveBaseball:14: error: type mismatch;
 found   : Any
 required: Int
  deplace(m,p)
            ^